added general purpose Switch participant

--- a/doc/src/asciidoc/ch09/participants/jsparticipant.adoc
+++ b/doc/src/asciidoc/ch09/participants/jsparticipant.adoc
@@ -1,4 +1,4 @@
-== JSParticipant 
+=== JSParticipant 
 
 The `org.jpos.transaction.participant.JSParticipant` is a handy stock
 participant that leverages Java 8 Nashorn.
