--- a/doc/src/asciidoc/ch09/transaction_participants.adoc
+++ b/doc/src/asciidoc/ch09/transaction_participants.adoc
@@ -4,6 +4,7 @@ jPOS comes with some general purpose transaction participant implementations tha
 can be used as-is or used as a reference to write your own.
 
 include::participants/switch.adoc[]
+include::participants/check_fields.adoc[]
 include::participants/send_response.adoc[]
 include::participants/jsparticipant.adoc[]
 
