Use two colons in prefix

--- a/doc/src/asciidoc/ch03/configuration.adoc
+++ b/doc/src/asciidoc/ch03/configuration.adoc
@@ -107,8 +107,8 @@ In the rare case where a value with the format `${...}` is required, the
 The jPOS `Environment` has a ServiceLoader based plugin mechanism that support 
 `EnvironmentProviders`. jPOS comes with two stock providers:
 
-  - `FileEnvironmentProvider` (prefix `file:`).
-  - `ObfEnvironmentProvider` (prefix `obf:`).
+  - `FileEnvironmentProvider` (prefix `file::`).
+  - `ObfEnvironmentProvider` (prefix `obf::`).
 
 A YAML file (i.e. `cfg/default.yml`) containing an entry like this:
 
