add support for global max-time
Also make sure we call abortParticipants, even on timeout situations

--- a/doc/src/asciidoc/ch09/transaction_participants.adoc
+++ b/doc/src/asciidoc/ch09/transaction_participants.adoc
@@ -9,7 +9,8 @@ The `<participant ...>` element supports an optional `enabled` attribute
 that can be used disable participants at runtime. The `enabled` value can
 either be 'yes/no/true/false` or a list of environment names (i.e.: `prod, staging`).
 
-In addition as of jPOS 3.0.0, it supports the `timeout` and `max-timeout` attributes.
+In addition as of jPOS 3.0.0, it supports the `timeout` and `max-time` attributes and
+global 'max-time' property.
 =====
 
 include::participants/switch.adoc[]
