--- a/doc/src/asciidoc/master.adoc
+++ b/doc/src/asciidoc/master.adoc
@@ -4,9 +4,9 @@ jPOS Programmer's Guide
 :author: jPOS Software SRL
 :email: apr@jpos.org
 :revdate: {localdate}
-:revnumber: 2.1.5
-:jpos_version: 2.1.4
-:jpos_snapshot_version: 2.1.5-SNAPSHOT
+:revnumber: 3.0.0
+:jpos_version: 3.0.0-SNAPSHOT
+:jpos_snapshot_version: 3.0.0-SNAPSHOT
 :toc:
 :source-highlighter: rouge
 :listing-caption: Listing
